syntax = "proto3";

option csharp_namespace = "Client";

service LobbyService {
  rpc JoinLobby (JoinLobbyRequest) returns (Player);
}

message JoinLobbyRequest {
  string name = 1;
}

message Player {
    string name = 1;
}